plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'nanukko'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    //spring boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //mybatis
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

//    //cloud
//    implementation 'org.springframework.cloud:spring-cloud-gcp-starter:2.0.2'
//    implementation 'org.springframework.cloud:spring-cloud-gcp-storage:2.0.2'

    //model mapper
    implementation 'org.modelmapper:modelmapper:3.1.0'

    //test
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'

    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    //	mysql-connector
    runtimeOnly 'com.mysql:mysql-connector-j'

    //jwt
//    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
//    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
//    testImplementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//    testRuntimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
//    testRuntimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

    // jwt
        implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
        implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
        implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'
        testImplementation 'io.jsonwebtoken:jjwt-api:0.12.3'
        testRuntimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
        testRuntimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'


    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    //websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.webjars:stomp-websocket:2.3.3-1'

    //json
    implementation group: 'org.json', name: 'json', version: '20231013'

    //mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // NCP Object Storage SDK
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

    //Thumbnailator는 이미지 처리 라이브러리로, Java에서 간단하게 썸네일을 생성
    //이미지 리사이징용
    implementation 'net.coobird:thumbnailator:0.4.20'

}

tasks.named('test') {
    useJUnitPlatform()
}
